--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -151,7 +151,7 @@
       },
       "source": [
         "Transition = namedtuple('Transition',\n",
-        "                        ('state', 'action', 'next_state', 'reward'))\n",
+        "                        ('state', 'action', 'next_state', 'reward', 'expected_reward'))\n",
         "\n",
         "\n",
         "class ReplayMemory(object):\n",
@@ -165,20 +165,21 @@
         "\n",
         "    def sample(self, batch_size):\n",
         "        return random.sample(self.memory, batch_size)\n",
+        "    \n",
+        "    def priority_sample(self, batch_size):\n",
+        "      diffs = np.array([np.power(np.absolute(x.reward.item() - x.expected_reward), 0.66)  for x in self.memory])\n",
+        "      s1 = np.sum(diffs)\n",
+        "      probs = diffs/s1\n",
+        "\n",
+        "      inds = np.random.choice(len(self.memory), batch_size, replace=False)\n",
+        "\n",
+        "      return [self.memory[i] for i in inds]\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "    def __len__(self):\n",
         "        return len(self.memory)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bGFP0pbRbs6r"
-      },
-      "source": [
-        "F.leaky_relu"
       ],
       "execution_count": null,
       "outputs": []
@@ -416,24 +417,8 @@
       },
       "source": [
         "\n",
-        "# # steps_done += 10\n",
-        "# # # # # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done, random.random()\n",
-        "# # # # state = get_screen().unsqueeze(0)\n",
-        "# # # # state.shape\n",
         "\n",
-        "# # # # select_action(state), policy_net(state).max(1)[1].view(1, 1)\n",
-        "\n",
-        "# # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()\n",
-        "\n",
-        "# # EPS_DECAY2 = 60000\n",
-        "# prev = 1.0\n",
-        "\n",
-        "# for i in range(100000):\n",
-        "#   eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * i / EPS_DECAY)\n",
-        "\n",
-        "#   if prev - eps_threshold >= 0.1:\n",
-        "#     print((i, eps_threshold))\n",
-        "#     prev = eps_threshold"
+        "select_action(state)"
       ],
       "execution_count": null,
       "outputs": []
@@ -470,7 +455,7 @@
         "      ps = vals/s\n",
         "\n",
         "      val = np.random.choice(n_actions, p = ps)\n",
-        "      return torch.tensor([[val]], device=device, dtype=torch.long)\n"
+        "      return torch.tensor([[val]], device=device, dtype=torch.long), xxx[val]\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -484,7 +469,9 @@
         "def optimize_model():\n",
         "    if len(memory) < BATCH_SIZE:\n",
         "        return\n",
-        "    transitions = memory.sample(BATCH_SIZE)\n",
+        "    #transitions = memory.sample(BATCH_SIZE)\n",
+        "\n",
+        "    transitions = memory.priority_sample(BATCH_SIZE)\n",
         "\n",
         "    batch = Transition(*zip(*transitions))\n",
         "\n",
@@ -549,7 +536,8 @@
         "# l = [-0.1, -0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1]\n",
         "\n",
         "# np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(l)])\n",
-        "\n"
+        "\n",
+        "[(x.reward, x.expected_reward) for x in memory.priority_sample(3)]"
       ],
       "execution_count": null,
       "outputs": []
@@ -581,21 +569,21 @@
         "    temp_rewards = []\n",
         "    temp_mempry =[]\n",
         "    for t in count():\n",
-        "        action = select_action(state)\n",
+        "        action, expected_reward = select_action(state)\n",
         "        _, reward, done, _ = env.step(action.item())\n",
         "        \n",
         "        next_state = get_screen().unsqueeze(0)\n",
         "\n",
         "        if done:\n",
         "          next_state = None\n",
-        "        temp_mempry.append((state, action, next_state))\n",
+        "        temp_mempry.append((state, action, next_state, expected_reward))\n",
         "        temp_rewards.append(reward)\n",
         "\n",
         "        \n",
         "        if done:\n",
         "\n",
         "          for (index, data) in enumerate(temp_mempry):\n",
-        "            state, action, next_state = data \n",
+        "            state, action, next_state, expected_reward = data \n",
         "            full_rewards = temp_rewards[index: index + window]\n",
         "\n",
         "            if t == env.max_steps - 1:\n",
@@ -607,7 +595,7 @@
         "\n",
         "            reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
         "            reward = torch.tensor([reward], device=device).float()\n",
-        "            memory.push(state, action, next_state, reward)\n",
+        "            memory.push(state, action, next_state, reward, expected_reward)\n",
         "\n",
         "\n",
         "        state = next_state\n",
@@ -673,11 +661,11 @@
         "import pandas as pd \n",
         "durarion_counter = {}\n",
         "\n",
-        "for duration in episode_durations:\n",
-        "  if duration not in durarion_counter:\n",
-        "    durarion_counter[duration] = 0\n",
+        "# for duration in episode_durations:\n",
+        "#   if duration not in durarion_counter:\n",
+        "#     durarion_counter[duration] = 0\n",
         "  \n",
-        "  durarion_counter[duration] += 1\n",
+        "#   durarion_counter[duration] += 1\n",
         "\n",
         "\n",
         "# durations_df = pd.DataFrame([(duration, counter) for (duration, counter) in durarion_counter.items()], columns =[\"duration\", \"counter\"])\n",
