--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -413,19 +413,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_5xYU_YC1q6y"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "select_action(state)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "7UZDLE0tlwW_"
       },
       "source": [
@@ -537,7 +524,7 @@
         "\n",
         "# np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(l)])\n",
         "\n",
-        "[(x.reward, x.expected_reward) for x in memory.priority_sample(3)]"
+        "# [(x.reward, x.expected_reward) for x in memory.priority_sample(3)]"
       ],
       "execution_count": null,
       "outputs": []
@@ -616,38 +603,6 @@
         "env.close()\n",
         "plt.ioff()\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PPPzMs7aC4KN"
-      },
-      "source": [
-        "\n",
-        "# ii = []\n",
-        "# for (index, data) in enumerate(temp_mempry):\n",
-        "#   state, action, next_state = data \n",
-        "#   full_rewards = temp_rewards[index: index + window]\n",
-        "\n",
-        "#   if 1==1:\n",
-        "#     if len(full_rewards) < window:\n",
-        "#       print('skip {}'.format(index))\n",
-        "#       continue\n",
-        "                \n",
-        "#     reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
-        "\n",
-        " \n",
-        "\n",
-        "#     ii.append((state, action, next_state, reward))\n",
-        "\n",
-        "#     if reward > -0.33:\n",
-        "#       print((len(ii), reward))\n",
-        "\n",
-        "\n",
-        "# # ii[180][-1]"
       ],
       "execution_count": null,
       "outputs": []
