--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -416,7 +416,7 @@
         "id": "7UZDLE0tlwW_"
       },
       "source": [
-        "def select_action(state):\n",
+        "def select_action(state, deterministic = False):\n",
         "    global steps_done\n",
         "    steps_done += 1\n",
         "\n",
@@ -435,14 +435,19 @@
         "\n",
         "    with torch.no_grad():\n",
         "      xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
-        "      m = xxx.min()\n",
-        "      vals = xxx - m + 0.0001 if m < 0 else xxx + 0.0001\n",
+        "     \n",
         "\n",
-        "      s = np.sum(vals)\n",
-        "      ps = vals/s\n",
+        "      \n",
+        "      if deterministic:\n",
+        "        return xxx.max(1)[1].view(1, 1)\n",
+        "      else:\n",
+        "        m = xxx.min()\n",
+        "        vals = xxx - m + 0.0001 if m < 0 else xxx + 0.0001\n",
         "\n",
-        "      val = np.random.choice(n_actions, p = ps)\n",
-        "      return torch.tensor([[val]], device=device, dtype=torch.long), xxx[val]\n"
+        "        s  = np.sum(vals)\n",
+        "        ps = vals/s\n",
+        "        val = np.random.choice(n_actions, p = ps)\n",
+        "        return torch.tensor([[val]], device=device, dtype=torch.long), xxx[val]\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -538,7 +543,7 @@
         "num_episodes = 10000\n",
         "episode_durations = []\n",
         "steps_done = 0\n",
-        "memory = ReplayMemory(1000)\n",
+        "memory = ReplayMemory(2500)\n",
         "policy_net.train()\n",
         "target_net.eval()\n",
         "sarsa_k = 1\n",
