--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -167,7 +167,10 @@
         "        return random.sample(self.memory, batch_size)\n",
         "    \n",
         "    def priority_sample(self, batch_size):\n",
-        "      diffs = np.array([np.power(np.absolute(x.reward.item() - x.expected_reward), 0.66)  for x in self.memory])\n",
+        "\n",
+        "      #np.absolute(-0.4463129088 - -0.44631290435791016) < 0.0000001\n",
+        "      \n",
+        "      diffs = np.array([np.power(np.absolute(x.reward.item() - x.expected_reward), 0.8)  for x in self.memory])\n",
         "      s1 = np.sum(diffs)\n",
         "      probs = diffs/s1\n",
         "\n",
@@ -203,7 +206,6 @@
         "#         self.conv3 = nn.Conv2d(64, 64, kernel_size=3, stride=1)\n",
         "#         #self.bn3 = nn.BatchNorm2d(32)\n",
         "\n",
-        "#         self.pooling = nn.MaxPool2d(3, stride=2)\n",
         "\n",
         "#         # Number of Linear input connections depends on output of conv2d layers\n",
         "#         # and therefore the input image size, so compute it.\n",
@@ -217,8 +219,8 @@
         "#         self.pre_adventage = nn.Linear(6400, 512)\n",
         "#         self.adventage = nn.Linear(512, outputs)\n",
         "\n",
-        "#         self.pre_val = nn.Linear(6400, 512)\n",
-        "#         self.val = nn.Linear(512, 1)\n",
+        "#         # self.pre_val = nn.Linear(6400, 512)\n",
+        "#         # self.val = nn.Linear(512, 1)\n",
         " \n",
         "#     # Called with either one element to determine next action, or a batch\n",
         "#     # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
@@ -227,31 +229,29 @@
         "#         # x = F.relu(self.bn1(self.conv1(x)))\n",
         "#         # x = F.relu(self.bn2(self.conv2(x)))\n",
         "#         # x = F.relu(self.bn3(self.conv3(x)))\n",
-        "#         x = F.relu(self.conv1(x))\n",
-        "#         x = F.relu(self.conv2(x))\n",
-        "#         x = F.relu(self.conv3(x))\n",
+        "#         x = F.leaky_relu(self.conv1(x))\n",
+        "#         x = F.leaky_relu(self.conv2(x))\n",
+        "#         x = F.leaky_relu(self.conv3(x))\n",
         "#         x = x.view(x.size(0), -1)\n",
         "\n",
-        "\n",
-        "       \n",
-        "\n",
-        "#         value = F.relu(self.pre_val(x))\n",
-        "#         value =  self.val(value)\n",
+        "#         # value = F.leaky_relu(self.pre_val(x))\n",
+        "#         # value =  self.val(value)\n",
         "\n",
         "#         adv = F.relu(self.pre_adventage(x))\n",
         "\n",
         "#         adv =  self.adventage(adv)\n",
         "\n",
-        "#         return value + adv - adv.mean()\n",
-        "  \n",
+        "#         #return value + adv - adv.mean()\n",
+        "#         return adv\n",
+        "\n",
         "#     def init_weights(self):\n",
         "#       torch.nn.init.xavier_uniform(self.conv1.weight)\n",
         "#       torch.nn.init.xavier_uniform(self.conv2.weight)\n",
         "#       torch.nn.init.xavier_uniform(self.conv3.weight)\n",
         "#       torch.nn.init.xavier_uniform(self.adventage.weight)\n",
-        "#       torch.nn.init.xavier_uniform(self.val.weight)\n",
+        "#       # torch.nn.init.xavier_uniform(self.val.weight)\n",
         "#       torch.nn.init.xavier_uniform(self.pre_adventage.weight)\n",
-        "#       torch.nn.init.xavier_uniform(self.pre_val.weight)\n",
+        "#       # torch.nn.init.xavier_uniform(self.pre_val.weight)\n",
         "\n",
         "\n",
         "class DQN(nn.Module):\n",
@@ -366,7 +366,7 @@
         "id": "6-Jsu3hTX0Su"
       },
       "source": [
-        "BATCH_SIZE = 128\n",
+        "BATCH_SIZE = 256\n",
         "GAMMA = 0.9\n",
         "EPS_START = 1.0\n",
         "EPS_END = 0.1\n",
@@ -398,7 +398,7 @@
         "policy_net.init_weights()\n",
         "policy_net.to(device)\n",
         "\n",
-        "target_net = DQN(n_actions).to(device)\n",
+        "target_net = DQN( n_actions).to(device)\n",
         "target_net.load_state_dict(policy_net.state_dict())\n",
         "target_net.eval()\n",
         "\n",
@@ -417,6 +417,7 @@
       },
       "source": [
         "def select_action(state, deterministic = False):\n",
+        "  \n",
         "    global steps_done\n",
         "    steps_done += 1\n",
         "\n",
@@ -424,22 +425,25 @@
         "    # eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
         "    #     math.exp(-1. * steps_done / EPS_DECAY)\n",
         "    \n",
-        "    # if sample > eps_threshold:\n",
-        "    #     with torch.no_grad():\n",
-        "    #         # t.max(1) will return largest column value of each row.\n",
-        "    #         # second column on max result is index of where max element was\n",
-        "    #         # found, so we pick action with the larger expected reward.\n",
-        "    #         return policy_net(state).max(1)[1].view(1, 1)\n",
+        "    # with torch.no_grad():\n",
+        "    #   values = policy_net(state).flatten()\n",
+        "\n",
+        "    # if True:# sample > eps_threshold:\n",
+        "    #       action_id = torch.argmax(values).cpu().detach().numpy().flatten().item()\n",
+        "    #       #action_id = actions.item()\n",
+        "\n",
+        "    #       return torch.tensor([[action_id]], device=device, dtype=torch.long), values[action_id].item()\n",
         "    # else:\n",
-        "    #     return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "    #     random_action = random.randrange(n_actions)\n",
+        "\n",
+        "    #     return torch.tensor([[random_action]], device=device, dtype=torch.long), values[random_action].item()\n",
         "\n",
         "    with torch.no_grad():\n",
         "      xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
         "     \n",
-        "\n",
-        "      \n",
         "      if deterministic:\n",
-        "        return xxx.max(1)[1].view(1, 1)\n",
+        "        action =  np.argmax(xxx)\n",
+        "        return torch.tensor([[action]], device=device, dtype=torch.long), xxx[action]\n",
         "      else:\n",
         "        m = xxx.min()\n",
         "        vals = xxx - m + 0.0001 if m < 0 else xxx + 0.0001\n",
@@ -455,10 +459,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "jruI_GlNpKvA"
+      },
+      "source": [
+        "# xxx = policy_net(state).cpu().detach().numpy().flatten()\n",
+        "select_action(state)\n",
+        "# policy_net(state)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "BJu43wD5ox-F"
       },
       "source": [
         "def optimize_model():\n",
+        "  \n",
         "    if len(memory) < BATCH_SIZE:\n",
         "        return\n",
         "    #transitions = memory.sample(BATCH_SIZE)\n",
@@ -514,7 +532,7 @@
         "id": "zkiUiikI8jve"
       },
       "source": [
-        "env.max_steps"
+        "# xxx = policy_net(state).cpu().detach().numpy().flatten()\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -525,11 +543,9 @@
         "id": "tHZH3s3YKDbV"
       },
       "source": [
-        "# l = [-0.1, -0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1,-0.1]\n",
         "\n",
-        "# np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(l)])\n",
         "\n",
-        "# [(x.reward, x.expected_reward) for x in memory.priority_sample(3)]"
+        "np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate([-0.1] * window)])"
       ],
       "execution_count": null,
       "outputs": []
@@ -543,11 +559,12 @@
         "num_episodes = 10000\n",
         "episode_durations = []\n",
         "steps_done = 0\n",
-        "memory = ReplayMemory(2500)\n",
+        "memory = ReplayMemory(1500)\n",
         "policy_net.train()\n",
         "target_net.eval()\n",
         "sarsa_k = 1\n",
         "window = 5\n",
+        "\n",
         "\n",
         "for i_episode in range(num_episodes):\n",
         "    \n",
@@ -557,10 +574,11 @@
         "    env.reset()\n",
         "    state = get_screen().unsqueeze(0)\n",
         "\n",
-        "    \n",
         "    temp_rewards = []\n",
         "    temp_mempry =[]\n",
+        "\n",
         "    for t in count():\n",
+        "\n",
         "        action, expected_reward = select_action(state)\n",
         "        _, reward, done, _ = env.step(action.item())\n",
         "        \n",
@@ -585,6 +603,8 @@
         "            # else:\n",
         "            #   print('well {}'.format(t))\n",
         "\n",
+        "            #reward = np.sum([ x * max(0, 1 - (i * 0.05)) for (i, x ) in  enumerate(full_rewards)])\n",
+        "            \n",
         "            reward = np.sum([ x * np.power(0.8, i) for (i, x ) in  enumerate(full_rewards)])\n",
         "            reward = torch.tensor([reward], device=device).float()\n",
         "            memory.push(state, action, next_state, reward, expected_reward)\n",
@@ -608,6 +628,28 @@
         "env.close()\n",
         "plt.ioff()\n",
         "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GB-jIzj9ksf4"
+      },
+      "source": [
+        "# for (index, data) in enumerate(temp_mempry):\n",
+        "#   state, action, next_state, expected_reward = data \n",
+        "#   full_rewards = temp_rewards[index: index + window]\n",
+        "\n",
+        "#   if t == env.max_steps - 1:\n",
+        "#     if len(full_rewards) < window:\n",
+        "#       continue\n",
+        "\n",
+        "#   reward = np.sum([ x * max(0, 1 - (i * 0.05)) for (i, x ) in  enumerate(full_rewards)])\n",
+        "#   reward = torch.tensor([reward], device=device).float()\n",
+        "    \n",
+        "#   print(reward)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -647,7 +689,12 @@
         "id": "PZtJ5miaCDlq"
       },
       "source": [
-        "len(episode_durations)"
+        "dd = [(x.reward.item(), x.expected_reward) for x in memory.memory]\n",
+        "re1 = pd.DataFrame(dd, columns =[\"reward\", \"expected_reward\"])\n",
+        "\n",
+        "sns.scatterplot(data=re1, x=\"reward\", y=\"expected_reward\")\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -658,7 +705,7 @@
         "id": "eH6MnfRSX54A"
       },
       "source": [
-        "episode_durations[-50:]"
+        "# "
       ],
       "execution_count": null,
       "outputs": []
@@ -755,18 +802,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H7q9THghMsFT"
-      },
-      "source": [
-        "# p1, reward, done, p2 = env.step(action.item())\n",
-        "p2, done"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "NOl5Tinsw9PK"
       },
       "source": [
@@ -784,24 +819,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5-ZCpOp2y7aP"
-      },
-      "source": [
-        "# _, reward, done, _ = env.step(4)\n",
-        "# reward, done"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "TOxpbN4lYp-8"
       },
       "source": [
-        "action = select_action(state)\n",
+        "action, r = select_action(state, False)\n",
         "_, reward, done, _ = env.step(action.item())\n",
-        "action.item(), reward"
+        "action.item(), reward, r"
       ],
       "execution_count": null,
       "outputs": []
@@ -853,7 +876,7 @@
       },
       "source": [
         "x = policy_net(state)\n",
-        "x, torch.argmax(x)"
+        "x, torch.argmax(x), torch.max(x) - x"
       ],
       "execution_count": null,
       "outputs": []
