--- a/SOKOBAN_Dueling_DQN_full_play.ipynb
+++ b/SOKOBAN_Dueling_DQN_full_play.ipynb
@@ -802,7 +802,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NOl5Tinsw9PK"
+        "id": "NOl5Tinsw9PK",
+        "collapsed": true
       },
       "source": [
         "state = get_screen().unsqueeze(0)\n",
