--- a/SOKOBAN_reinforce.ipynb
+++ b/SOKOBAN_reinforce.ipynb
@@ -647,13 +647,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rQARuqlnAnk1"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "id": "rQARuqlnAnk1",
+        "outputId": "802285dd-f5ba-412f-f920-74af79f59e0c"
       },
       "source": [
         "state = env.reset()"
       ],
-      "execution_count": 17,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-b973f175d723>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'env' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
