--- a/LunarLanderContinuous_v2_reinforce.ipynb
+++ b/LunarLanderContinuous_v2_reinforce.ipynb
@@ -19,11 +19,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cfuLYnwaSRVA",
-        "outputId": "a9858c44-6f16-4ca8-c375-0a65d7637832",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cfuLYnwaSRVA",
+        "outputId": "a9858c44-6f16-4ca8-c375-0a65d7637832"
       },
       "source": [
         "!apt-get install -y xvfb python-opengl > /dev/null 2>&1\n",
@@ -94,11 +94,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JJ7Bi8kgUGud",
-        "outputId": "3f8ad699-1ef2-4171-9eb5-52f237abcdfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JJ7Bi8kgUGud",
+        "outputId": "3f8ad699-1ef2-4171-9eb5-52f237abcdfc"
       },
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -121,11 +121,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fi0I0rlzUHK2",
-        "outputId": "d82bfbcf-995b-4b0f-a079-a53455fa34b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fi0I0rlzUHK2",
+        "outputId": "d82bfbcf-995b-4b0f-a079-a53455fa34b5"
       },
       "source": [
         "from pyvirtualdisplay import Display\n",
@@ -149,24 +149,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mtE7zxPqi9go"
+        "id": "mtE7zxPqi9go",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "14f1d56c-86e5-4174-fb2a-5f69fc6152ec"
       },
       "source": [
         "env = gym.make('LunarLanderContinuous-v2')\n",
-        "state = env.reset()"
+        "state = env.reset()\n",
+        "state"
       ],
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.00500078,  1.4218507 ,  0.50650877,  0.48579848, -0.00578786,\n",
+              "       -0.11473183,  0.        ,  0.        ], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "vdDQhv6bfPsx",
-        "outputId": "2ce59013-20a3-4af3-c4ca-5f5cee5893a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "outputId": "2ce59013-20a3-4af3-c4ca-5f5cee5893a3"
       },
       "source": [
         "# \n",
@@ -205,49 +222,203 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Wodr19xdDxZl",
-        "outputId": "eded80a2-812d-4c1a-ec67-3ffbfde5a51a"
+        "id": "EEDxuutFU9Dw",
+        "outputId": "c0c6cf34-adf9-4fca-d5d2-72783e142704"
       },
       "source": [
-        ""
+        "actions_map = {0: [0.5, 0.0], 1: [-1, -0.75] , 2: [-1, 0.75] , 3: [0.5, -0.75] , 4: [0.5, 0.75]}\n",
+        "num_of_actions = len(actions_map)\n",
+        "num_of_actions"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "13"
+              "5"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 17
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jlPcO4lHL8Lb",
-        "outputId": "a44c7587-31ae-4cd5-ec80-5587ecd6b914"
+        "id": "Wodr19xdDxZl"
       },
       "source": [
-        ""
+        "ActionLog = namedtuple('ActionLog', ['log_prob'])\n"
       ],
-      "execution_count": null,
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jlPcO4lHL8Lb"
+      },
+      "source": [
+        "class Net(nn.Module):\n",
+        "    def __init__(self, state_size, num_of_actions):\n",
+        "        super(Net, self).__init__()\n",
+        "        self.fc1 = nn.Linear(state_size, 256)\n",
+        "        self.fc2 = nn.Linear(256, 128)\n",
+        "        self.fc3 = nn.Linear(128, 64)\n",
+        "        self.fc4 = nn.Linear(64, num_of_actions)\n",
+        "\n",
+        "    def forward(self, state):\n",
+        "        x = self.fc1(state)\n",
+        "        x = F.leaky_relu(x)\n",
+        "        x = self.fc2(x)\n",
+        "        x = F.leaky_relu(x)\n",
+        "        x = self.fc3(x)\n",
+        "        x = F.leaky_relu(x)\n",
+        "        return self.fc4(x)\n",
+        "      \n",
+        "    \n",
+        "    def init_weights(self):\n",
+        "\n",
+        "      torch.nn.init.xavier_uniform_(self.fc1.weight)\n",
+        "      torch.nn.init.xavier_uniform_(self.fc2.weight)\n",
+        "      torch.nn.init.xavier_uniform_(self.fc3.weight)\n",
+        "    \n",
+        "\n",
+        "\n",
+        "class Agent:\n",
+        "    def __init__(self, net):\n",
+        "        self.net = net \n",
+        "\n",
+        "        self.saved_actions = []\n",
+        "        self.rewards = []\n",
+        "\n",
+        "    def run_on_state(self, state):\n",
+        "\n",
+        "        state = state.to(device)\n",
+        "        actions_prob = self.net(state)\n",
+        "      \n",
+        "        return  actions_prob"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NiT3RFYZWksR"
+      },
+      "source": [
+        "GAMMA = 0.9\n",
+        "EPS_START = 1.0\n",
+        "EPS_END = 0.2\n",
+        "EPS_DECAY = 6000\n",
+        "steps_done = 0"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sA0z-jLQWmxn"
+      },
+      "source": [
+        "def select_action(state):\n",
+        "  \n",
+        "    global steps_done\n",
+        "    steps_done += 1\n",
+        "\n",
+        "    state_tensor = image_transformations(state).unsqueeze(0)\n",
+        "    probs = model.run_on_state(state_tensor)\n",
+        "    categorical = Categorical(probs)\n",
+        "\n",
+        "    action = categorical.sample()\n",
+        "    model.saved_actions.append(ActionLog(categorical.log_prob(action)))\n",
+        "\n",
+        "\n",
+        "    return action.item()"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qWrNmUilWsuX"
+      },
+      "source": [
+        "def train_on_episode():\n",
+        "\n",
+        "    saved_actions = model.saved_actions\n",
+        "    policy_losses = [] \n",
+        "    returns = []\n",
+        "\n",
+        "    step_total_r = 0\n",
+        "    for step_immediate_rewars in reversed(model.rewards):\n",
+        "        step_total_r = step_immediate_rewars + GAMMA * step_total_r\n",
+        "        returns.insert(0, step_total_r)\n",
+        "\n",
+        "    returns = torch.tensor(returns).to(device)\n",
+        "\n",
+        "    returns = (returns - returns.mean()) / (returns.std() + eps)\n",
+        "\n",
+        "    prev_state = None\n",
+        "    prev_action = None\n",
+        "    for (saved_action, step_total_r) in zip(saved_actions, returns):\n",
+        "\n",
+        "        # policy_losses.append(-saved_action.log_prob * step_total_r)\n",
+        "        policy_losses.append(-saved_action.log_prob * step_total_r)\n",
+        "\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "  \n",
+        "    loss = torch.cat(policy_losses).sum()\n",
+        "\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "    \n",
+        "    model.rewards = []\n",
+        "    model.saved_actions = []\n",
+        "\n",
+        "    return loss"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 351
+        },
+        "id": "Z2Lq32hqWvQ_",
+        "outputId": "b878c1f4-2ba2-4bad-b4a2-d1e5a37725a2"
+      },
+      "source": [
+        "net = Net(state.shape[0] , num_of_actions).init_weights().to(device)\n",
+        "\n",
+        "model = Agent(net)\n",
+        "\n",
+        "optimizer = optim.SGD(net.parameters(), lr=0.0001)\n",
+        "\n",
+        "eps = np.finfo(np.float32).eps.item()"
+      ],
+      "execution_count": 33,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "device(type='cuda')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-33-37421df7be5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mnum_of_actions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAgent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.0001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1129\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1130\u001b[0m         raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0;32m-> 1131\u001b[0;31m             type(self).__name__, name))\n\u001b[0m\u001b[1;32m   1132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1133\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Module'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Net' object has no attribute 'init_weights'"
+          ]
         }
       ]
     }
